--- a/twentytwentyone-child/formulaire.html
+++ b/twentytwentyone-child/formulaire.html
@@ -1,61 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-      <link rel="stylesheet" href="style.css" />
-   </head>
-   <body>
-      <div class="container">
-        <div class="qteboutons">
-            <div class="qte">
-                <div class="boutonplusmoins">
-                    <input class="number" type="number" value="0" />
-                    <div class="plusmoins">
-                        <button class="plus">+</button>
-                        <div class="separator"></div>
-                        <button class="moins">-</button>
-                    </div>
-                </div>
-                <input class="ok" type="button" value="OK" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="qteboutons">
+        <div class="qte">
+          <div class="boutonplusmoins">
+            <input class="number" type="number" value="0" />
+            <div class="plusmoins">
+              <button class="plus">+</button>
+              <div class="separator"></div>
+              <button class="moins">-</button>
             </div>
-            <div class="qte"></div>
-            <div class="qte"></div>
-            <div class="qte"></div>
+          </div>
+          <input class="ok" type="button" value="OK" />
         </div>
       </div>
-      <div class="separation"></div>
-      <div class="container">
-         <div class="formulaire">
-            <div class="vosinformations">
-               <h3>Vos informations</h3>
-               <br />
-               <label>Nom [text* your-name autocomplete:name] </label>
-               <br />
-               <label>Prénom [text* your-first-name autocomplete:name] </label>
-               <br />
-               <label>E-mail [email* your-email autocomplete:email] </label>
-               <br />
+      <div class="qteboutons">
+        <div class="qte">
+          <div class="boutonplusmoins">
+            <input class="number" type="number" value="0" />
+            <div class="plusmoins">
+              <button class="plus">+</button>
+              <div class="separator"></div>
+              <button class="moins">-</button>
             </div>
-            <div class="ligne"></div>
-            <div class="livraison">
-               <h3>Livraison</h3>
-               <br />
-               <label>Adresse de livraison [text* your-address] </label>
-               <br />
-​
-               <label>Code postal [text* your-town-numbers] </label>
-               <br />
-               <label>Ville [text* your-town] </label>
-               <br />
-            </div>
-         </div>
-         <div class="monbouton">
-            <input type="button" value="Commander" />
-         </div>
+          </div>
+          <input class="ok" type="button" value="OK" />
+        </div>
       </div>
-   </body>
+        <div class="qteboutons">
+          <div class="qte">
+            <div class="boutonplusmoins">
+              <input class="number" type="number" value="0" />
+              <div class="plusmoins">
+                <button class="plus">+</button>
+                <div class="separator"></div>
+                <button class="moins">-</button>
+              </div>
+            </div>
+            <input class="ok" type="button" value="OK" />
+          </div>
+        </div>
+      </div>
+        <div class="qteboutons">
+          <div class="qte">
+            <div class="boutonplusmoins">
+              <input class="number" type="number" value="0" />
+              <div class="plusmoins">
+                <button class="plus">+</button>
+                <div class="separator"></div>
+                <button class="moins">-</button>
+              </div>
+            </div>
+            <input class="ok" type="button" value="OK" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="separation"></div>
+    <div class="container2">
+      <div class="formulaire">
+        <div class="vosinformations">
+          <h3>Vos informations</h3>
+          <br />
+          <label>Nom [text* your-name autocomplete:name] </label>
+          <br />
+          <label>Prénom [text* your-first-name autocomplete:name] </label>
+          <br />
+          <label>E-mail [email* your-email autocomplete:email] </label>
+          <br />
+        </div>
+        <div class="ligne"></div>
+        <div class="livraison">
+          <h3>Livraison</h3>
+          <br />
+          <label>Adresse de livraison [text* your-address] </label>
+          <br />
+          ​
+          <label>Code postal [text* your-town-numbers] </label>
+          <br />
+          <label>Ville [text* your-town] </label>
+          <br />
+        </div>
+      </div>
+      <div class="monbouton">
+        <input type="button" value="Commander" />
+      </div>
+    </div>
+  </body>
 </html>
 ​
 <!--code Mathieu  
